codeditor/jolc/jolc/Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> jolc
Rule 1     jolc -> statement_list
Rule 2     statement_list -> statement terminator
Rule 3     statement_list -> statement_list statement terminator
Rule 4     statement_list -> <empty>
Rule 5     statement -> expression
Rule 6     statement -> if_statement
Rule 7     if_statement -> if expression statement_list elseif_clause end
Rule 8     if_statement -> if expression statement_list elseif_clause else_clause end
Rule 9     if_statement -> if expression statement_list end
Rule 10    if_statement -> if expression statement_list else_clause end
Rule 11    elseif_clause -> elseif expression statement_list
Rule 12    elseif_clause -> elseif_clause elseif expression statement_list
Rule 13    else_clause -> else statement_list
Rule 14    statement -> function identifier lparen arguments rparen statement_list end
Rule 15    statement -> print lparen arguments rparen
Rule 16    statement -> println lparen arguments rparen
Rule 17    statement -> while expression statement_list end
Rule 18    statement -> for container statement_list end
Rule 19    statement -> struct identifier struct_parameters end
Rule 20    statement -> mutable struct identifier struct_parameters end
Rule 21    type_data -> Int64
Rule 22    type_data -> Float64
Rule 23    type_data -> Bool
Rule 24    type_data -> Char
Rule 25    type_data -> String
Rule 26    type_data -> id
Rule 27    expression -> primitive
Rule 28    expression -> array_access
Rule 29    expression -> array_operator
Rule 30    expression -> type_data
Rule 31    primitive -> valor_entero
Rule 32    primitive -> valor_decimal
Rule 33    primitive -> valor_cadena
Rule 34    primitive -> valor_caracter
Rule 35    primitive -> verdadero
Rule 36    primitive -> falso
Rule 37    expression -> nothing
Rule 38    array_operator -> native point expression
Rule 39    array_operator -> expression point oparray
Rule 40    oparray -> plus expression
Rule 41    oparray -> minus expression
Rule 42    oparray -> mul expression
Rule 43    oparray -> div expression
Rule 44    oparray -> mod expression
Rule 45    oparray -> exp expression
Rule 46    expression -> global expression
Rule 47    expression -> local expression
Rule 48    expression -> expression equal expression
Rule 49    expression -> expression definir type_data
Rule 50    expression -> expression plus expression
Rule 51    expression -> expression minus expression
Rule 52    expression -> expression mul expression
Rule 53    expression -> expression div expression
Rule 54    expression -> expression mod expression
Rule 55    expression -> expression exp expression
Rule 56    expression -> plus expression
Rule 57    expression -> minus expression
Rule 58    expression -> expression gte expression
Rule 59    expression -> expression lte expression
Rule 60    expression -> expression gt expression
Rule 61    expression -> expression lt expression
Rule 62    expression -> expression eq expression
Rule 63    expression -> expression neq expression
Rule 64    expression -> expression and expression
Rule 65    expression -> expression or expression
Rule 66    expression -> no expression
Rule 67    expression -> identifier lparen arguments rparen
Rule 68    expression -> lsqbrack arguments rsqbrack
Rule 69    expression -> lsqbrack arguments rsqbrack definir Array lkey type_data rkey
Rule 70    expression -> valor_cadena lsqbrack expslice rsqbrack
Rule 71    array_access -> identifier list_index
Rule 72    list_index -> lsqbrack argsarray rsqbrack
Rule 73    list_index -> list_index lsqbrack argsarray rsqbrack
Rule 74    argsarray -> expslice
Rule 75    expslice -> slice_copy
Rule 76    expslice -> slice_left
Rule 77    expslice -> slice_right
Rule 78    expslice -> slice_all
Rule 79    expslice -> expression
Rule 80    slice_copy -> twopoint
Rule 81    slice_left -> expression twopoint
Rule 82    slice_right -> twopoint expression
Rule 83    slice_all -> expression twopoint expression
Rule 84    container -> identifier in argscontainer
Rule 85    argscontainer -> slice_all
Rule 86    argscontainer -> expression
Rule 87    expression -> break
Rule 88    expression -> continue
Rule 89    expression -> return expression
Rule 90    expression -> lparen expression rparen
Rule 91    expression -> id listpoint
Rule 92    listpoint -> point identifier
Rule 93    listpoint -> listpoint point identifier
Rule 94    expression -> native lparen arguments rparen
Rule 95    native -> sin
Rule 96    native -> cos
Rule 97    native -> tan
Rule 98    native -> sqrt
Rule 99    native -> log10
Rule 100   native -> uppercase
Rule 101   native -> lowercase
Rule 102   native -> trunc
Rule 103   native -> float
Rule 104   native -> string
Rule 105   native -> typeof
Rule 106   native -> length
Rule 107   native -> log
Rule 108   native -> parse
Rule 109   native -> push no
Rule 110   native -> pop no
Rule 111   id -> identifier
Rule 112   arguments -> expression
Rule 113   arguments -> arguments comma expression
Rule 114   arguments -> <empty>
Rule 115   struct_parameters -> expression terminator
Rule 116   struct_parameters -> struct_parameters expression terminator
Rule 117   struct_parameters -> <empty>

Terminals, with rules where they appear

Array                : 69
Bool                 : 23
Char                 : 24
Float64              : 22
Int64                : 21
String               : 25
and                  : 64
break                : 87
comma                : 113
continue             : 88
cos                  : 96
definir              : 49 69
div                  : 43 53
else                 : 13
elseif               : 11 12
end                  : 7 8 9 10 14 17 18 19 20
eq                   : 62
equal                : 48
error                : 
exp                  : 45 55
falso                : 36
float                : 103
for                  : 18
function             : 14
global               : 46
gt                   : 60
gte                  : 58
identifier           : 14 19 20 67 71 84 92 93 111
if                   : 7 8 9 10
in                   : 84
length               : 106
lkey                 : 69
local                : 47
log                  : 107
log10                : 99
lowercase            : 101
lparen               : 14 15 16 67 90 94
lsqbrack             : 68 69 70 72 73
lt                   : 61
lte                  : 59
minus                : 41 51 57
mod                  : 44 54
mul                  : 42 52
mutable              : 20
neq                  : 63
no                   : 66 109 110
nothing              : 37
or                   : 65
parse                : 108
plus                 : 40 50 56
point                : 38 39 92 93
pop                  : 110
print                : 15
println              : 16
push                 : 109
return               : 89
rkey                 : 69
rparen               : 14 15 16 67 90 94
rsqbrack             : 68 69 70 72 73
sin                  : 95
sqrt                 : 98
string               : 104
struct               : 19 20
tan                  : 97
terminator           : 2 3 115 116
trunc                : 102
twopoint             : 80 81 82 83
typeof               : 105
uppercase            : 100
valor_cadena         : 33 70
valor_caracter       : 34
valor_decimal        : 32
valor_entero         : 31
verdadero            : 35
while                : 17

Nonterminals, with rules where they appear

argsarray            : 72 73
argscontainer        : 84
arguments            : 14 15 16 67 68 69 94 113
array_access         : 28
array_operator       : 29
container            : 18
else_clause          : 8 10
elseif_clause        : 7 8 12
expression           : 5 7 8 9 10 11 12 17 38 39 40 41 42 43 44 45 46 47 48 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 79 81 82 83 83 86 89 90 112 113 115 116
expslice             : 70 74
id                   : 26 91
if_statement         : 6
jolc                 : 0
list_index           : 71 73
listpoint            : 91 93
native               : 38 94
oparray              : 39
primitive            : 27
slice_all            : 78 85
slice_copy           : 75
slice_left           : 76
slice_right          : 77
statement            : 2 3
statement_list       : 1 3 7 8 9 10 11 12 13 14 17 18
struct_parameters    : 19 20 116
type_data            : 30 49 69

Parsing method: LALR

state 0

    (0) S' -> . jolc
    (1) jolc -> . statement_list
    (2) statement_list -> . statement terminator
    (3) statement_list -> . statement_list statement terminator
    (4) statement_list -> .
    (5) statement -> . expression
    (6) statement -> . if_statement
    (14) statement -> . function identifier lparen arguments rparen statement_list end
    (15) statement -> . print lparen arguments rparen
    (16) statement -> . println lparen arguments rparen
    (17) statement -> . while expression statement_list end
    (18) statement -> . for container statement_list end
    (19) statement -> . struct identifier struct_parameters end
    (20) statement -> . mutable struct identifier struct_parameters end
    (27) expression -> . primitive
    (28) expression -> . array_access
    (29) expression -> . array_operator
    (30) expression -> . type_data
    (37) expression -> . nothing
    (46) expression -> . global expression
    (47) expression -> . local expression
    (48) expression -> . expression equal expression
    (49) expression -> . expression definir type_data
    (50) expression -> . expression plus expression
    (51) expression -> . expression minus expression
    (52) expression -> . expression mul expression
    (53) expression -> . expression div expression
    (54) expression -> . expression mod expression
    (55) expression -> . expression exp expression
    (56) expression -> . plus expression
    (57) expression -> . minus expression
    (58) expression -> . expression gte expression
    (59) expression -> . expression lte expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lt expression
    (62) expression -> . expression eq expression
    (63) expression -> . expression neq expression
    (64) expression -> . expression and expression
    (65) expression -> . expression or expression
    (66) expression -> . no expression
    (67) expression -> . identifier lparen arguments rparen
    (68) expression -> . lsqbrack arguments rsqbrack
    (69) expression -> . lsqbrack arguments rsqbrack definir Array lkey type_data rkey
    (70) expression -> . valor_cadena lsqbrack expslice rsqbrack
    (87) expression -> . break
    (88) expression -> . continue
    (89) expression -> . return expression
    (90) expression -> . lparen expression rparen
    (91) expression -> . id listpoint
    (94) expression -> . native lparen arguments rparen
    (7) if_statement -> . if expression statement_list elseif_clause end
    (8) if_statement -> . if expression statement_list elseif_clause else_clause end
    (9) if_statement -> . if expression statement_list end
    (10) if_statement -> . if expression statement_list else_clause end
    (31) primitive -> . valor_entero
    (32) primitive -> . valor_decimal
    (33) primitive -> . valor_cadena
    (34) primitive -> . valor_caracter
    (35) primitive -> . verdadero
    (36) primitive -> . falso
    (71) array_access -> . identifier list_index
    (38) array_operator -> . native point expression
    (39) array_operator -> . expression point oparray
    (21) type_data -> . Int64
    (22) type_data -> . Float64
    (23) type_data -> . Bool
    (24) type_data -> . Char
    (25) type_data -> . String
    (26) type_data -> . id
    (111) id -> . identifier
    (95) native -> . sin
    (96) native -> . cos
    (97) native -> . tan
    (98) native -> . sqrt
    (99) native -> . log10
    (100) native -> . uppercase
    (101) native -> . lowercase
    (102) native -> . trunc
    (103) native -> . float
    (104) native -> . string
    (105) native -> . typeof
    (106) native -> . length
    (107) native -> . log
    (108) native -> . parse
    (109) native -> . push no
    (110) native -> . pop no

  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for print resolved as shift
  ! shift/reduce conflict for println resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for struct resolved as shift
  ! shift/reduce conflict for mutable resolved as shift
  ! shift/reduce conflict for nothing resolved as shift
  ! shift/reduce conflict for global resolved as shift
  ! shift/reduce conflict for local resolved as shift
  ! shift/reduce conflict for plus resolved as shift
  ! shift/reduce conflict for minus resolved as shift
  ! shift/reduce conflict for no resolved as shift
  ! shift/reduce conflict for identifier resolved as shift
  ! shift/reduce conflict for lsqbrack resolved as shift
  ! shift/reduce conflict for valor_cadena resolved as shift
  ! shift/reduce conflict for break resolved as shift
  ! shift/reduce conflict for continue resolved as shift
  ! shift/reduce conflict for return resolved as shift
  ! shift/reduce conflict for lparen resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for valor_entero resolved as shift
  ! shift/reduce conflict for valor_decimal resolved as shift
  ! shift/reduce conflict for valor_caracter resolved as shift
  ! shift/reduce conflict for verdadero resolved as shift
  ! shift/reduce conflict for falso resolved as shift
  ! shift/reduce conflict for Int64 resolved as shift
  ! shift/reduce conflict for Float64 resolved as shift
  ! shift/reduce conflict for Bool resolved as shift
  ! shift/reduce conflict for Char resolved as shift
  ! shift/reduce conflict for String resolved as shift
  ! shift/reduce conflict for sin resolved as shift
  ! shift/reduce conflict for cos resolved as shift
  ! shift/reduce conflict for tan resolved as shift
  ! shift/reduce conflict for sqrt resolved as shift
  ! shift/reduce conflict for log10 resolved as shift
  ! shift/reduce conflict for uppercase resolved as shift
  ! shift/reduce conflict for lowercase resolved as shift
  ! shift/reduce conflict for trunc resolved as shift
  ! shift/reduce conflict for float resolved as shift
  ! shift/reduce conflict for string resolved as shift
  ! shift/reduce conflict for typeof resolved as shift
  ! shift/reduce conflict for length resolved as shift
  ! shift/reduce conflict for log resolved as shift
  ! shift/reduce conflict for parse resolved as shift
  ! shift/reduce conflict for push resolved as shift
  ! shift/reduce conflict for pop resolved as shift
    $end            reduce using rule 4 (statement_list -> .)
    function        shift and go to state 6
    print           shift and go to state 9
    println         shift and go to state 10
    while           shift and go to state 11
    for             shift and go to state 12
    struct          shift and go to state 13
    mutable         shift and go to state 14
    nothing         shift and go to state 19
    global          shift and go to state 20
    local           shift and go to state 21
    plus            shift and go to state 22
    minus           shift and go to state 23
    no              shift and go to state 24
    identifier      shift and go to state 7
    lsqbrack        shift and go to state 25
    valor_cadena    shift and go to state 26
    break           shift and go to state 27
    continue        shift and go to state 28
    return          shift and go to state 29
    lparen          shift and go to state 8
    if              shift and go to state 32
    valor_entero    shift and go to state 33
    valor_decimal   shift and go to state 34
    valor_caracter  shift and go to state 35
    verdadero       shift and go to state 36
    falso           shift and go to state 37
    Int64           shift and go to state 38
    Float64         shift and go to state 39
    Bool            shift and go to state 40
    Char            shift and go to state 41
    String          shift and go to state 42
    sin             shift and go to state 43
    cos             shift and go to state 44
    tan             shift and go to state 45
    sqrt            shift and go to state 46
    log10           shift and go to state 47
    uppercase       shift and go to state 48
    lowercase       shift and go to state 49
    trunc           shift and go to state 50
    float           shift and go to state 51
    string          shift and go to state 52
    typeof          shift and go to state 53
    length          shift and go to state 54
    log             shift and go to state 55
    parse           shift and go to state 56
    push            shift and go to state 57
    pop             shift and go to state 58

  ! function        [ reduce using rule 4 (statement_list -> .) ]
  ! print           [ reduce using rule 4 (statement_list -> .) ]
  ! println         [ reduce using rule 4 (statement_list -> .) ]
  ! while           [ reduce using rule 4 (statement_list -> .) ]
  ! for             [ reduce using rule 4 (statement_list -> .) ]
  ! struct          [ reduce using rule 4 (statement_list -> .) ]
  ! mutable         [ reduce using rule 4 (statement_list -> .) ]
  ! nothing         [ reduce using rule 4 (statement_list -> .) ]
  ! global          [ reduce using rule 4 (statement_list -> .) ]
  ! local           [ reduce using rule 4 (statement_list -> .) ]
  ! plus            [ reduce using rule 4 (statement_list -> .) ]
  ! minus           [ reduce using rule 4 (statement_list -> .) ]
  ! no              [ reduce using rule 4 (statement_list -> .) ]
  ! identifier      [ reduce using rule 4 (statement_list -> .) ]
  ! lsqbrack        [ reduce using rule 4 (statement_list -> .) ]
  ! valor_cadena    [ reduce using rule 4 (statement_list -> .) ]
  ! break           [ reduce using rule 4 (statement_list -> .) ]
  ! continue        [ reduce using rule 4 (statement_list -> .) ]
  ! return          [ reduce using rule 4 (statement_list -> .) ]
  ! lparen          [ reduce using rule 4 (statement_list -> .) ]
  ! if              [ reduce using rule 4 (statement_list -> .) ]
  ! valor_entero    [ reduce using rule 4 (statement_list -> .) ]
  ! valor_decimal   [ reduce using rule 4 (statement_list -> .) ]
  ! valor_caracter  [ reduce using rule 4 (statement_list -> .) ]
  ! verdadero       [ reduce using rule 4 (statement_list -> .) ]
  ! falso           [ reduce using rule 4 (statement_list -> .) ]
  ! Int64           [ reduce using rule 4 (statement_list -> .) ]
  ! Float64         [ reduce using rule 4 (statement_list -> .) ]
  ! Bool            [ reduce using rule 4 (statement_list -> .) ]
  ! Char            [ reduce using rule 4 (statement_list -> .) ]
  ! String          [ reduce using rule 4 (statement_list -> .) ]
  ! sin             [ reduce using rule 4 (statement_list -> .) ]
  ! cos             [ reduce using rule 4 (statement_list -> .) ]
  ! tan             [ reduce using rule 4 (statement_list -> .) ]
  ! sqrt            [ reduce using rule 4 (statement_list -> .) ]
  ! log10           [ reduce using rule 4 (statement_list -> .) ]
  ! uppercase       [ reduce using rule 4 (statement_list -> .) ]
  ! lowercase       [ reduce using rule 4 (statement_list -> .) ]
  ! trunc           [ reduce using rule 4 (statement_list -> .) ]
  ! float           [ reduce using rule 4 (statement_list -> .) ]
  ! string          [ reduce using rule 4 (statement_list -> .) ]
  ! typeof          [ reduce using rule 4 (statement_list -> .) ]
  ! length          [ reduce using rule 4 (statement_list -> .) ]
  ! log             [ reduce using rule 4 (statement_list -> .) ]
  ! parse           [ reduce using rule 4 (statement_list -> .) ]
  ! push            [ reduce using rule 4 (statement_list -> .) ]
  ! pop             [ reduce using rule 4 (statement_list -> .) ]

    jolc                           shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 15
    array_access                   shift and go to state 16
    array_operator                 shift and go to state 17
    type_data                      shift and go to state 18
    id                             shift and go to state 30
    native                         shift and go to state 31

state 1

    (0) S' -> jolc .



state 2

    (1) jolc -> statement_list .
    (3) statement_list -> statement_list . statement terminator
    (5) statement -> . expression
    (6) statement -> . if_statement
    (14) statement -> . function identifier lparen arguments rparen statement_list end
    (15) statement -> . print lparen arguments rparen
    (16) statement -> . println lparen arguments rparen
    (17) statement -> . while expression statement_list end
    (18) statement -> . for container statement_list end
    (19) statement -> . struct identifier struct_parameters end
    (20) statement -> . mutable struct identifier struct_parameters end
    (27) expression -> . primitive
    (28) expression -> . array_access
    (29) expression -> . array_operator
    (30) expression -> . type_data
    (37) expression -> . nothing
    (46) expression -> . global expression
    (47) expression -> . local expression
    (48) expression -> . expression equal expression
    (49) expression -> . expression definir type_data
    (50) expression -> . expression plus expression
    (51) expression -> . expression minus expression
    (52) expression -> . expression mul expression
    (53) expression -> . expression div expression
    (54) expression -> . expression mod expression
    (55) expression -> . expression exp expression
    (56) expression -> . plus expression
    (57) expression -> . minus expression
    (58) expression -> . expression gte expression
    (59) expression -> . expression lte expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lt expression
    (62) expression -> . expression eq expression
    (63) expression -> . expression neq expression
    (64) expression -> . expression and expression
    (65) expression -> . expression or expression
    (66) expression -> . no expression
    (67) expression -> . identifier lparen arguments rparen
    (68) expression -> . lsqbrack arguments rsqbrack
    (69) expression -> . lsqbrack arguments rsqbrack definir Array lkey type_data rkey
    (70) expression -> . valor_cadena lsqbrack expslice rsqbrack
    (87) expression -> . break
    (88) expression -> . continue
    (89) expression -> . return expression
    (90) expression -> . lparen expression rparen
    (91) expression -> . id listpoint
    (94) expression -> . native lparen arguments rparen
    (7) if_statement -> . if expression statement_list elseif_clause end
    (8) if_statement -> . if expression statement_list elseif_clause else_clause end
    (9) if_statement -> . if expression statement_list end
    (10) if_statement -> . if expression statement_list else_clause end
    (31) primitive -> . valor_entero
    (32) primitive -> . valor_decimal
    (33) primitive -> . valor_cadena
    (34) primitive -> . valor_caracter
    (35) primitive -> . verdadero
    (36) primitive -> . falso
    (71) array_access -> . identifier list_index
    (38) array_operator -> . native point expression
    (39) array_operator -> . expression point oparray
    (21) type_data -> . Int64
    (22) type_data -> . Float64
    (23) type_data -> . Bool
    (24) type_data -> . Char
    (25) type_data -> . String
    (26) type_data -> . id
    (111) id -> . identifier
    (95) native -> . sin
    (96) native -> . cos
    (97) native -> . tan
    (98) native -> . sqrt
    (99) native -> . log10
    (100) native -> . uppercase
    (101) native -> . lowercase
    (102) native -> . trunc
    (103) native -> . float
    (104) native -> . string
    (105) native -> . typeof
    (106) native -> . length
    (107) native -> . log
    (108) native -> . parse
    (109) native -> . push no
    (110) native -> . pop no

    $end            reduce using rule 1 (jolc -> statement_list .)
    function        shift and go to state 6
    print           shift and go to state 9
    println         shift and go to state 10
    while           shift and go to state 11
    for             shift and go to state 12
    struct          shift and go to state 13
    mutable         shift and go to state 14
    nothing         shift and go to state 19
    global          shift and go to state 20
    local           shift and go to state 21
    plus            shift and go to state 22
    minus           shift and go to state 23
    no              shift and go to state 24
    identifier      shift and go to state 7
    lsqbrack        shift and go to state 25
    valor_cadena    shift and go to state 26
    break           shift and go to state 27
    continue        shift and go to state 28
    return          shift and go to state 29
    lparen          shift and go to state 8
    if              shift and go to state 32
    valor_entero    shift and go to state 33
    valor_decimal   shift and go to state 34
    valor_caracter  shift and go to state 35
    verdadero       shift and go to state 36
    falso           shift and go to state 37
    Int64           shift and go to state 38
    Float64         shift and go to state 39
    Bool            shift and go to state 40
    Char            shift and go to state 41
    String          shift and go to state 42
    sin             shift and go to state 43
    cos             shift and go to state 44
    tan             shift and go to state 45
    sqrt            shift and go to state 46
    log10           shift and go to state 47
    uppercase       shift and go to state 48
    lowercase       shift and go to state 49
    trunc           shift and go to state 50
    float           shift and go to state 51
    string          shift and go to state 52
    typeof          shift and go to state 53
    length          shift and go to state 54
    log             shift and go to state 55
    parse           shift and go to state 56
    push            shift and go to state 57
    pop             shift and go to state 58

    statement                      shift and go to state 59
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 15
    array_access                   shift and go to state 16
    array_operator                 shift and go to state 17
    type_data                      shift and go to state 18
    id                             shift and go to state 30
    native                         shift and go to state 31

state 3

    (2) statement_list -> statement . terminator

    terminator      shift and go to state 60


state 4

    (5) statement -> expression .
    (48) expression -> expression . equal expression
    (49) expression -> expression . definir type_data
    (50) expression -> expression . plus expression
    (51) expression -> expression . minus expression
    (52) expression -> expression . mul expression
    (53) expression -> expression . div expression
    (54) expression -> expression . mod expression
    (55) expression -> expression . exp expression
    (58) expression -> expression . gte expression
    (59) expression -> expression . lte expression
    (60) expression -> expression . gt expression
    (61) expression -> expression . lt expression
    (62) expression -> expression . eq expression
    (63) expression -> expression . neq expression
    (64) expression -> expression . and expression
    (65) expression -> expression . or expression
    (39) array_operator -> expression . point oparray

    terminator      reduce using rule 5 (statement -> expression .)
    equal           shift and go to state 61
    definir         shift and go to state 62
    plus            shift and go to state 63
    minus           shift and go to state 64
    mul             shift and go to state 65
    div             shift and go to state 66
    mod             shift and go to state 67
    exp             shift and go to state 68
    gte             shift and go to state 69
    lte             shift and go to state 70
    gt              shift and go to state 71
    lt              shift and go to state 72
    eq              shift and go to state 73
    neq             shift and go to state 74
    and             shift and go to state 75
    or              shift and go to state 76
    point           shift and go to state 77


state 5

    (6) statement -> if_statement .

    terminator      reduce using rule 6 (statement -> if_statement .)


state 6

    (14) statement -> function . identifier lparen arguments rparen statement_list end

    identifier      shift and go to state 78


state 7

    (67) expression -> identifier . lparen arguments rparen
    (71) array_access -> identifier . list_index
    (111) id -> identifier .
    (72) list_index -> . lsqbrack argsarray rsqbrack
    (73) list_index -> . list_index lsqbrack argsarray rsqbrack

  ! shift/reduce conflict for lparen resolved as shift
  ! shift/reduce conflict for lsqbrack resolved as shift
    lparen          shift and go to state 79
    point           reduce using rule 111 (id -> identifier .)
    equal           reduce using rule 111 (id -> identifier .)
    definir         reduce using rule 111 (id -> identifier .)
    plus            reduce using rule 111 (id -> identifier .)
    minus           reduce using rule 111 (id -> identifier .)
    mul             reduce using rule 111 (id -> identifier .)
    div             reduce using rule 111 (id -> identifier .)
    mod             reduce using rule 111 (id -> identifier .)
    exp             reduce using rule 111 (id -> identifier .)
    gte             reduce using rule 111 (id -> identifier .)
    lte             reduce using rule 111 (id -> identifier .)
    gt              reduce using rule 111 (id -> identifier .)
    lt              reduce using rule 111 (id -> identifier .)
    eq              reduce using rule 111 (id -> identifier .)
    neq             reduce using rule 111 (id -> identifier .)
    and             reduce using rule 111 (id -> identifier .)
    or              reduce using rule 111 (id -> identifier .)
    terminator      reduce using rule 111 (id -> identifier .)
    rparen          reduce using rule 111 (id -> identifier .)
    function        reduce using rule 111 (id -> identifier .)
    print           reduce using rule 111 (id -> identifier .)
    println         reduce using rule 111 (id -> identifier .)
    while           reduce using rule 111 (id -> identifier .)
    for             reduce using rule 111 (id -> identifier .)
    struct          reduce using rule 111 (id -> identifier .)
    mutable         reduce using rule 111 (id -> identifier .)
    nothing         reduce using rule 111 (id -> identifier .)
    global          reduce using rule 111 (id -> identifier .)
    local           reduce using rule 111 (id -> identifier .)
    no              reduce using rule 111 (id -> identifier .)
    identifier      reduce using rule 111 (id -> identifier .)
    valor_cadena    reduce using rule 111 (id -> identifier .)
    break           reduce using rule 111 (id -> identifier .)
    continue        reduce using rule 111 (id -> identifier .)
    return          reduce using rule 111 (id -> identifier .)
    if              reduce using rule 111 (id -> identifier .)
    valor_entero    reduce using rule 111 (id -> identifier .)
    valor_decimal   reduce using rule 111 (id -> identifier .)
    valor_caracter  reduce using rule 111 (id -> identifier .)
    verdadero       reduce using rule 111 (id -> identifier .)
    falso           reduce using rule 111 (id -> identifier .)
    Int64           reduce using rule 111 (id -> identifier .)
    Float64         reduce using rule 111 (id -> identifier .)
    Bool            reduce using rule 111 (id -> identifier .)
    Char            reduce using rule 111 (id -> identifier .)
    String          reduce using rule 111 (id -> identifier .)
    sin             reduce using rule 111 (id -> identifier .)
    cos             reduce using rule 111 (id -> identifier .)
    tan             reduce using rule 111 (id -> identifier .)
    sqrt            reduce using rule 111 (id -> identifier .)
    log10           reduce using rule 111 (id -> identifier .)
    uppercase       reduce using rule 111 (id -> identifier .)
    lowercase       reduce using rule 111 (id -> identifier .)
    trunc           reduce using rule 111 (id -> identifier .)
    float           reduce using rule 111 (id -> identifier .)
    string          reduce using rule 111 (id -> identifier .)
    typeof          reduce using rule 111 (id -> identifier .)
    length          reduce using rule 111 (id -> identifier .)
    log             reduce using rule 111 (id -> identifier .)
    parse           reduce using rule 111 (id -> identifier .)
    push            reduce using rule 111 (id -> identifier .)
    pop             reduce using rule 111 (id -> identifier .)
    end             reduce using rule 111 (id -> identifier .)
    rsqbrack        reduce using rule 111 (id -> identifier .)
    comma           reduce using rule 111 (id -> identifier .)
    elseif          reduce using rule 111 (id -> identifier .)
    else            reduce using rule 111 (id -> identifier .)
    twopoint        reduce using rule 111 (id -> identifier .)
    lsqbrack        shift and go to state 81

  ! lsqbrack        [ reduce using rule 111 (id -> identifier .) ]
  ! lparen          [ reduce using rule 111 (id -> identifier .) ]

    list_index                     shift and go to state 80

state 8

    (90) expression -> lparen . expression rparen
    (27) expression -> . primitive
    (28) expression -> . array_access
    (29) expression -> . array_operator
    (30) expression -> . type_data
    (37) expression -> . nothing
    (46) expression -> . global expression
    (47) expression -> . local expression
    (48) expression -> . expression equal expression
    (49) expression -> . expression definir type_data
    (50) expression -> . expression plus expression
    (51) expression -> . expression minus expression
    (52) expression -> . expression mul expression
    (53) expression -> . expression div expression
    (54) expression -> . expression mod expression
    (55) expression -> . expression exp expression
    (56) expression -> . plus expression
    (57) expression -> . minus expression
    (58) expression -> . expression gte expression
    (59) expression -> . expression lte expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lt expression
    (62) expression -> . expression eq expression
    (63) expression -> . expression neq expression
    (64) expression -> . expression and expression
    (65) expression -> . expression or expression
    (66) expression -> . no expression
    (67) expression -> . identifier lparen arguments rparen
    (68) expression -> . lsqbrack arguments rsqbrack
    (69) expression -> . lsqbrack arguments rsqbrack definir Array lkey type_data rkey
    (70) expression -> . valor_cadena lsqbrack expslice rsqbrack
    (87) expression -> . break
    (88) expression -> . continue
    (89) expression -> . return expression
    (90) expression -> . lparen expression rparen
    (91) expression -> . id listpoint
    (94) expression -> . native lparen arguments rparen
    (31) primitive -> . valor_entero
    (32) primitive -> . valor_decimal
    (33) primitive -> . valor_cadena
    (34) primitive -> . valor_caracter
    (35) primitive -> . verdadero
    (36) primitive -> . falso
    (71) array_access -> . identifier list_index
    (38) array_operator -> . native point expression
    (39) array_operator -> . expression point oparray
    (21) type_data -> . Int64
    (22) type_data -> . Float64
    (23) type_data -> . Bool
    (24) type_data -> . Char
    (25) type_data -> . String
    (26) type_data -> . id
    (111) id -> . identifier
    (95) native -> . sin
    (96) native -> . cos
    (97) native -> . tan
    (98) native -> . sqrt
    (99) native -> . log10
    (100) native -> . uppercase
    (101) native -> . lowercase
    (102) native -> . trunc
    (103) native -> . float
    (104) native -> . string
    (105) native -> . typeof
    (106) native -> . length
    (107) native -> . log
    (108) native -> . parse
    (109) native -> . push no
    (110) native -> . pop no

    nothing         shift and go to state 19
    global          shift and go to state 20
    local           shift and go to state 21
    plus            shift and go to state 22
    minus           shift and go to state 23
    no              shift and go to state 24
    identifier      shift and go to state 7
    lsqbrack        shift and go to state 25
    valor_cadena    shift and go to state 26
    break           shift and go to state 27
    continue        shift and go to state 28
    return          shift and go to state 29
    lparen          shift and go to state 8
    valor_entero    shift and go to state 33
    valor_decimal   shift and go to state 34
    valor_caracter  shift and go to state 35
    verdadero       shift and go to state 36
    falso           shift and go to state 37
    Int64           shift and go to state 38
    Float64         shift and go to state 39
    Bool            shift and go to state 40
    Char            shift and go to state 41
    String          shift and go to state 42
    sin             shift and go to state 43
    cos             shift and go to state 44
    tan             shift and go to state 45
    sqrt            shift and go to state 46
    log10           shift and go to state 47
    uppercase       shift and go to state 48
    lowercase       shift and go to state 49
    trunc           shift and go to state 50
    float           shift and go to state 51
    string          shift and go to state 52
    typeof          shift and go to state 53
    length          shift and go to state 54
    log             shift and go to state 55
    parse           shift and go to state 56
    push            shift and go to state 57
    pop             shift and go to state 58

    expression                     shift and go to state 82
    primitive                      shift and go to state 15
    array_access                   shift and go to state 16
    array_operator                 shift and go to state 17
    type_data                      shift and go to state 18
    id                             shift and go to state 30
    native                         shift and go to state 31

state 9

    (15) statement -> print . lparen arguments rparen

    lparen          shift and go to state 83


state 10

    (16) statement -> println . lparen arguments rparen

    lparen          shift and go to state 84


state 11
